# llm-playground-gtk

./: .gitignore  .gitmodules  Cargo.toml
src/: chat.rs  main.rs  settings.rs  settings_menu.rs  style.css  submit.rs  util.rs
