[package]
name = "llm-playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-signals = "0.3.33"
futures = "0.3.30"
futures-util = "0.3.30"
gtk = { version = "0.8.1", package = "gtk4", features = ["v4_12"] }
lazy_static = "1.4.0"
reqwest = "0.12.2"
reqwest-eventsource = { path="./reqwest-eventsource" }
serde = "1.0.197"
serde_json = "1.0.115"
tokio = { version = "1.36.0", features = ["full"] }
maplit = "1.0.2"
